// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataViz tests should match snapshot when Reports By Employee is selectedControl 1`] = `
<div
  className="data-viz"
>
  <div
    className="selected-div"
  />
  <div
    className="data-viz-cards"
  >
    <div>
      <h2
        className="data-viz-cards-header"
      >
        Select an employee
      </h2>
      <div
        className="data-viz-cards"
      >
        <Card
          body={
            <button
              onClick={[Function]}
            >
              Select
            </button>
          }
          cardClickHandler={[Function]}
          employeeId={1}
          formsBySelector={true}
          header="FNBO Building"
          key="employee0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DataViz tests should match snapshot when Reports By Project is selectedControl 1`] = `
<div
  className="data-viz"
>
  <div
    className="selected-div"
  />
  <div
    className="data-viz-cards"
  >
    <div>
      <h2
        className="data-viz-cards-header"
      >
        Select a project
      </h2>
      <div
        className="data-viz-cards"
      />
    </div>
  </div>
</div>
`;

exports[`DataViz tests should match snapshot when selectedControl is All Reports 1`] = `
<div
  className="data-viz"
>
  <div
    className="selected-div"
  />
  <div
    className="data-viz-cards"
  >
    <Card
      cardClickHandler={[Function]}
      formDetails={
        Array [
          "robbie@g.com",
          11,
          "Mortenson",
          "2018-01-07T21:18:12.993Z",
          "30 minutes",
          true,
          true,
          true,
          undefined,
          "xxx",
          <img
            src="xxx"
          />,
        ]
      }
      header="Hotwork Permit - Robbie"
      key="form0"
    />
    <Card
      cardClickHandler={[Function]}
      formDetails={
        Array [
          "robbie@g.com",
          11,
          "Mortenson",
          "2018-01-07T21:18:12.993Z",
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          "xxx",
          <img
            src="xxx"
          />,
        ]
      }
      header="Pretask Permit - Robbie"
      key="form1"
    />
  </div>
</div>
`;

exports[`DataViz tests should match snapshot when selectedControl is Employees 1`] = `
<div
  className="data-viz"
>
  <div
    className="selected-div"
  />
  <div
    className="data-viz-cards"
  >
    <Card
      body="Underling"
      cardClickHandler={[Function]}
      employeeInfo={
        Array [
          "444-444-4445",
          "mickjeets@email.com",
        ]
      }
      header="Mick Jeets"
      key="employee0"
    />
    <Card
      body="The Boss"
      cardClickHandler={[Function]}
      employeeInfo={
        Array [
          "555-555-5556",
          "robbie@email.com",
        ]
      }
      header="Robbie Griener"
      key="employee1"
    />
  </div>
</div>
`;

exports[`DataViz tests should match snapshot when selectedControl is Projects 1`] = `
<div
  className="data-viz"
>
  <div
    className="selected-div"
  />
  <div
    className="data-viz-cards"
  >
    <Card
      body="Omaha"
      cardClickHandler={[Function]}
      header="FNBO Building"
      key="project0"
      projectInfo={
        Array [
          true,
          true,
        ]
      }
    />
    <Card
      body="Boston"
      cardClickHandler={[Function]}
      header="Stadium"
      key="project1"
      projectInfo={
        Array [
          true,
          false,
        ]
      }
    />
  </div>
</div>
`;

exports[`DataViz tests should render a welcome page when no control is selected 1`] = `
<div
  className="data-viz"
>
  <div
    className="welcome"
  >
    <h1>
      Welcome to Construction Forms!
    </h1>
    <div
      className="logo"
    />
  </div>
  <div
    className="selected-div"
  />
  <div
    className="data-viz-cards"
  />
</div>
`;
